use space styles file, fix spacing all around, update copy

--- a/app/public/styles/_base.scss
+++ b/app/public/styles/_base.scss
@@ -13,5 +13,4 @@ body {
   background: $background-color;
   min-height: 100%;
   overflow: hidden;
-  padding: 40px;
 }
